data/derived/sp14/progs/unify/prog4357.ml.out
Characters 156-190:
  ((eval (e2,x,y))+.(eval (e3,x,y)))/2
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
